--- a/.config/i3/config
+++ b/.config/i3/config
@@ -195,4 +195,4 @@ gaps outer 0
 # Workspace assignments
 assign [class="^qutebrowser$"] 2
 assign [class="code"] 3
-assign [class="Vivaldi"] 4
+assign [class="firefox"] 2
