Update i3 config for i3lock and i3status.

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -28,7 +28,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-#exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -64,10 +64,10 @@ bindsym $mod+d exec --no-startup-id /usr/local/bin/dmenu_run
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+# bindsym $mod+j focus left
+# bindsym $mod+k focus down
+# bindsym $mod+l focus up
+# bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -191,7 +191,12 @@ bar {
 }
 
 for_window [class=".*"] border pixel 0
-gaps inner 5
+gaps inner 4
 gaps outer 0
 
 assign [class="firefox"] 2
+
+# i3lock
+
+bindsym $mod+l exec --no-startup-id i3lock --nofork
+
