--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -14,10 +14,10 @@ general {
 
 # order += "ipv6"
 order += "wireless _first_"
-# order += "ethernet _first_"
+order += "ethernet _first_"
 # order += "disk /"
 order += "load"
-order += "memory"
+# order += "memory"
 order += "volume master"
 order += "battery all"
 order += "tztime local"
@@ -70,3 +70,4 @@ memory {
 tztime local {
         format = "%Y-%m-%d %H:%M:%S"
 }
+
